--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,156 +1,104 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang | default: 'en-US' }}">
-  <head>
-    <meta charset="UTF-8">
-    <title>MHHRI | {{ page.title }}</title>
-    <meta name="description" content="{{ page.title }}">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width initial-scale=1">
-    <link rel="alternate" hreflang="en" href="https://henkpb.github.io/hhri/">
-    <link rel="alternate" hreflang="es" href="https://henkpb.github.io/hhri/es">
-    <link rel="alternate" hreflang="x-default" href="https://henkpb.github.io/hhri">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1&amp;icon_names=menu,menu_open&amp;display=block">
-    <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/micl.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-  </head>
-  <body class="micl-window dark">
+<section class="micl-pane">
+  <header class="micl-appbar">
+    <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
+  </header>
+  <header class="hhri-title micl-pane__columns micl-pane__columns--stacked-to-expanded">
+    <div class="micl-pane__column">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128 160" style="enable-background:new 0 0 128 160;" xml:space="preserve">
+        <g>
+          <path fill="currentcolor" d="M98.6,158.5c-0.8-28.7-4-34.4-5.3-35.5l-0.1-0.1h-0.4l-0.1,0.1c-1,1.2-10.3,11.8-19.1,14.1
+            c-3.9,1-8,1.4-12.1,1.4h-0.5c-6.1,0-11.5-0.9-14-2.3c-1.3-0.7-3.2-2.1-5.7-3.9c-4.3-3.1-10.1-7.3-14-8.5c-7-2.5-13.8-5.6-20.2-9.4
+            c-1.9-1.3-4-2.4-6.1-3.3v-1.4c2.4,1,4.7,2.2,6.9,3.7c6.3,3.7,13,6.8,19.9,9.2c3.5,1.1,8.7,4.7,13.2,7.8l1.1,0.8
+            c2.7,2.1,4.4,3.2,5.6,3.9c2.2,1.3,7.4,2.1,13.2,2.1c4.5,0,8.8-0.5,12.2-1.4c7.6-2,15.8-10.8,18.2-13.5l0.1-0.1l-1.7-9.4l-0.4,0.4
+            c-2.2,2.1-6.8,4-11.5,5.8l-0.9,0.3c-0.9,0.3-1.9,0.5-3,0.5c-4-0.1-7.7-1.9-10.2-4.9c-2.2-2.6-5.3-4.4-8.6-5c-1-0.3-1.7-0.6-2.4-0.8
+            c-3.3-1.7-5.1-2.9-4.7-10c0.2-3.4-0.3-4.2-0.5-4.3l-0.1-0.1l-0.1,0c-0.7,0.1-1.4,0.4-2,0.8L44.7,96c-2.3,0.9-7.9,7.2-9.6,9.3
+            l-1-0.9c2-2.3,7.5-8.6,10.1-9.7l0.7-0.3l0.4-0.2c0.8-0.4,1.6-0.7,2.3-0.7c0.3,0,0.6,0.1,0.9,0.3c1,0.7,1.3,2.3,1.1,5.6
+            c-0.4,6.6,1,7.2,3.8,8.6l0.1,0.1c0.8,0.3,1.5,0.6,2.3,0.8c3.5,0.8,6.7,2.8,8.9,5.6c2.2,2.8,5.4,4.3,8.9,4.3c0.9,0,1.8-0.1,2.8-0.3
+            l1-0.4c7.8-2.9,11.8-5.2,11.8-6.7c0-2-3.1-12.3-5.3-19.9l-0.5-1.8c-0.4-1.5-0.8-2.9-1.2-4.1c-0.3-1.2-0.6-2.1-0.8-2.7
+            c-0.2-0.6-0.6-1.6-1-2.9c-3.8-10.5-7.5-21.9-3.3-24.5c4.2-2.3,8.7-4.3,13.2-6.1l0.2-0.1c7-2.9,14.9-6.3,17.5-8.4l2.2-1.7
+            c5.3-4.2,14-11.1,15.6-15h0.2V1.3h1.3v29.6c0,0.1,0.9,8.5-5.8,19.3c-6.4,10.5-29.2,57.7-30.7,60.7l0,0.1l2,10.6l0.2,0
+            c0.2,0,0.4,0.1,0.5,0.2c2.4,1.2,5.5,8.5,6.3,36.8L98.6,158.5L98.6,158.5z M84.8,53.2c-2.3,0.9-4.7,2.1-6.8,3.3
+            c-3.4,2,0.5,14,3.8,22.9l0.3,0.9c0.3,0.9,0.6,1.6,0.8,2.1c0.3,1.2,1,3.6,1.9,6.8c2.3,7.8,4.5,15.1,5.5,19.2l0.2,0.8l0.4-0.8
+            c5.6-11.4,24.1-49.5,29.7-58.8c6.3-10.4,5.5-18.5,5.5-18.6v-4.6l-0.5,0.7c-3,3.9-9.2,8.9-14.7,13.2l-1.9,1.5
+            c-2.8,2.2-10.4,5.4-17.8,8.6l-4,1.7l1.1,0.2c3.2,0.4,6.1,0.7,8.5,0.7c2.9,0,5.1-0.3,6.6-0.9c5.4-2.2,7.1-3.3,9.7-7.4l1.2,0.7
+            c-2.7,4.4-4.7,5.7-10.2,8c-2.1,0.7-4.2,1.1-6.4,1.1c-0.2,0-0.5,0-0.7,0c-3.9-0.1-7.8-0.5-11.6-1.2L84.8,53.2L84.8,53.2L84.8,53.2z" />
+          <path fill="currentcolor" d="M18.2,76.7c-4.9,0-8.7-0.7-10.8-1.9l0.8-1.1c1.9,1.1,5.5,1.7,10,1.7c3.4,0,7.1-0.3,10.7-1
+            c6.5-1.2,9.2-7.2,10.1-9.8l0.1-0.4h-1.1c-3.1,0-5.9-0.1-8.7-0.4c-4.1-0.4-8.2-0.6-12.5-0.8c-7.9-0.4-13-0.7-15.7-1.6v-1.4
+            c2.5,1,9.8,1.3,15.8,1.6c4.3,0.2,8.4,0.4,12.5,0.8c3,0.2,6.1,0.3,9.1,0.3c4.2,0,8.4-0.2,12.5-0.7c1.5-0.2,2.9-0.3,4.4-0.3l-0.1,1.3
+            c-1.4,0-2.8,0.1-4.2,0.3l-1.2,0.1c-2.5,0.2-5.6,0.5-9.2,0.5h-0.2l-0.1,0.2c-0.9,3-3.8,9.9-11.4,11.3C25.6,76.4,21.9,76.7,18.2,76.7
+            L18.2,76.7z" />
+        </g>
+      </svg>
+    </div>
+    <div class="micl-pane__column">
+      <h1 class="md-sys-typescale-display-medium">{{ page.title }}</h1>
+      <p class="md-sys-typescale-headline-medium">{{ page.subtitle1 }}</p>
+      <p class="md-sys-typescale-headline-medium">{{ page.subtitle2 }}</p>
+    </div>
+  </header>
+</section>
 
-    <dialog id="hhrimenu" class="micl-navigationrail" closedby="closerequest">
-      <div class="micl-navigationrail__headline">
-        <button type="button" class="micl-iconbutton-standard-s micl-button--toggle material-symbols-outlined" command="close" commandfor="hhrimenu">menu_open</button>
-      </div>
-      <div class="micl-navigationrail__content">
-        {% assign topics = 'manual|theme|resource|etraining' | split: '|' %}
-        {% for topic in topics %}
-          {% assign topic_title = topic | append: '_title' %}
-          {% assign topic_list = topic | append: '_list' %}
-          {% if site.data.menu[topic_title] %}
-            <p class="md-sys-typescale-title-large">{{ site.data.menu[topic_title] }}</p>
-            {% if site.data.menu[topic_list] %}
-              {% for item in site.data.menu[topic_list] %}
-                <button type="button" class="micl-button-text-s" command="close" commandfor="hhrimenu" onclick="window.location.href='{{ item.link | relative_url }}'">
-                  <span class="micl-button__icon hhri-icon" aria-hidden="true">{{ item.icon }}</span>
-                  <span>{{ item.title }}</span>
-                </button>
-              {% endfor %}
+<section class="micl-pane">
+  <div class="hhri-news-section">
+    {% assign sorted_news = site.news | sort: 'date' | reverse %}
+
+    {% for item in sorted_news limit:3 %}
+      {% if item.title %}
+        <div class="micl-card-filled" tabindex="0">
+          <img alt="{{ item.title }}" class="micl-card__image" src="{{ item.image | relative_url }}">
+          <div class="micl-card__headline-m">
+            <h2>{{ item.title }}</h2>
+          </div>
+          <p class="micl-card__supporting-text">{{ item.date | date: "%d.%m.%Y" }}</p>
+          <div class="micl-card__content md-sys-typescale-body-medium">
+            {% if item.intro %}
+              <span>{{ item.intro }}</span>
             {% endif %}
-          {% endif %}
-        {% endfor %}
-      </div>
-    </dialog>
-
-    <main class="micl-body">
-      <section class="micl-pane">
-        <header class="micl-appbar">
-          <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
-        </header>
-        <header class="hhri-title micl-pane__columns micl-pane__columns--stacked-to-expanded">
-          <div class="micl-pane__column">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 128 160" style="enable-background:new 0 0 128 160;" xml:space="preserve">
-              <g>
-              	<path fill="currentcolor" d="M98.6,158.5c-0.8-28.7-4-34.4-5.3-35.5l-0.1-0.1h-0.4l-0.1,0.1c-1,1.2-10.3,11.8-19.1,14.1
-              		c-3.9,1-8,1.4-12.1,1.4h-0.5c-6.1,0-11.5-0.9-14-2.3c-1.3-0.7-3.2-2.1-5.7-3.9c-4.3-3.1-10.1-7.3-14-8.5c-7-2.5-13.8-5.6-20.2-9.4
-              		c-1.9-1.3-4-2.4-6.1-3.3v-1.4c2.4,1,4.7,2.2,6.9,3.7c6.3,3.7,13,6.8,19.9,9.2c3.5,1.1,8.7,4.7,13.2,7.8l1.1,0.8
-              		c2.7,2.1,4.4,3.2,5.6,3.9c2.2,1.3,7.4,2.1,13.2,2.1c4.5,0,8.8-0.5,12.2-1.4c7.6-2,15.8-10.8,18.2-13.5l0.1-0.1l-1.7-9.4l-0.4,0.4
-              		c-2.2,2.1-6.8,4-11.5,5.8l-0.9,0.3c-0.9,0.3-1.9,0.5-3,0.5c-4-0.1-7.7-1.9-10.2-4.9c-2.2-2.6-5.3-4.4-8.6-5c-1-0.3-1.7-0.6-2.4-0.8
-              		c-3.3-1.7-5.1-2.9-4.7-10c0.2-3.4-0.3-4.2-0.5-4.3l-0.1-0.1l-0.1,0c-0.7,0.1-1.4,0.4-2,0.8L44.7,96c-2.3,0.9-7.9,7.2-9.6,9.3
-              		l-1-0.9c2-2.3,7.5-8.6,10.1-9.7l0.7-0.3l0.4-0.2c0.8-0.4,1.6-0.7,2.3-0.7c0.3,0,0.6,0.1,0.9,0.3c1,0.7,1.3,2.3,1.1,5.6
-              		c-0.4,6.6,1,7.2,3.8,8.6l0.1,0.1c0.8,0.3,1.5,0.6,2.3,0.8c3.5,0.8,6.7,2.8,8.9,5.6c2.2,2.8,5.4,4.3,8.9,4.3c0.9,0,1.8-0.1,2.8-0.3
-              		l1-0.4c7.8-2.9,11.8-5.2,11.8-6.7c0-2-3.1-12.3-5.3-19.9l-0.5-1.8c-0.4-1.5-0.8-2.9-1.2-4.1c-0.3-1.2-0.6-2.1-0.8-2.7
-              		c-0.2-0.6-0.6-1.6-1-2.9c-3.8-10.5-7.5-21.9-3.3-24.5c4.2-2.3,8.7-4.3,13.2-6.1l0.2-0.1c7-2.9,14.9-6.3,17.5-8.4l2.2-1.7
-              		c5.3-4.2,14-11.1,15.6-15h0.2V1.3h1.3v29.6c0,0.1,0.9,8.5-5.8,19.3c-6.4,10.5-29.2,57.7-30.7,60.7l0,0.1l2,10.6l0.2,0
-              		c0.2,0,0.4,0.1,0.5,0.2c2.4,1.2,5.5,8.5,6.3,36.8L98.6,158.5L98.6,158.5z M84.8,53.2c-2.3,0.9-4.7,2.1-6.8,3.3
-              		c-3.4,2,0.5,14,3.8,22.9l0.3,0.9c0.3,0.9,0.6,1.6,0.8,2.1c0.3,1.2,1,3.6,1.9,6.8c2.3,7.8,4.5,15.1,5.5,19.2l0.2,0.8l0.4-0.8
-              		c5.6-11.4,24.1-49.5,29.7-58.8c6.3-10.4,5.5-18.5,5.5-18.6v-4.6l-0.5,0.7c-3,3.9-9.2,8.9-14.7,13.2l-1.9,1.5
-              		c-2.8,2.2-10.4,5.4-17.8,8.6l-4,1.7l1.1,0.2c3.2,0.4,6.1,0.7,8.5,0.7c2.9,0,5.1-0.3,6.6-0.9c5.4-2.2,7.1-3.3,9.7-7.4l1.2,0.7
-              		c-2.7,4.4-4.7,5.7-10.2,8c-2.1,0.7-4.2,1.1-6.4,1.1c-0.2,0-0.5,0-0.7,0c-3.9-0.1-7.8-0.5-11.6-1.2L84.8,53.2L84.8,53.2L84.8,53.2z" />
-              	<path fill="currentcolor" d="M18.2,76.7c-4.9,0-8.7-0.7-10.8-1.9l0.8-1.1c1.9,1.1,5.5,1.7,10,1.7c3.4,0,7.1-0.3,10.7-1
-              		c6.5-1.2,9.2-7.2,10.1-9.8l0.1-0.4h-1.1c-3.1,0-5.9-0.1-8.7-0.4c-4.1-0.4-8.2-0.6-12.5-0.8c-7.9-0.4-13-0.7-15.7-1.6v-1.4
-              		c2.5,1,9.8,1.3,15.8,1.6c4.3,0.2,8.4,0.4,12.5,0.8c3,0.2,6.1,0.3,9.1,0.3c4.2,0,8.4-0.2,12.5-0.7c1.5-0.2,2.9-0.3,4.4-0.3l-0.1,1.3
-              		c-1.4,0-2.8,0.1-4.2,0.3l-1.2,0.1c-2.5,0.2-5.6,0.5-9.2,0.5h-0.2l-0.1,0.2c-0.9,3-3.8,9.9-11.4,11.3C25.6,76.4,21.9,76.7,18.2,76.7
-              		L18.2,76.7z" />
-              </g>
-            </svg>
           </div>
-          <div class="micl-pane__column">
-            <h1 class="md-sys-typescale-display-medium">{{ page.title }}</h1>
-            <p class="md-sys-typescale-headline-medium">{{ page.subtitle1 }}</p>
-            <p class="md-sys-typescale-headline-medium">{{ page.subtitle2 }}</p>
+        </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+
+  {% if site.data.menu.topics %}
+    {% assign topics = site.data.menu.topics | split: ',' %}
+    {% for topic in topics %}
+      {% assign topic_title = topic | strip | append: '_title' %}
+      {% assign topic_text = topic | strip | append: '_text' %}
+      {% assign topic_list = topic | strip | append: '_list' %}
+      {% if site.data.menu[topic_title] %}
+        <div class="micl-card-filled">
+          <div class="micl-card__headline-l">
+            <h2>{{ site.data.menu[topic_title] }}</h2>
           </div>
-        </header>
-      </section>
-      <section class="micl-pane">
-        <div class="hhri-news-section">
-          {% assign sorted_news = site.news | sort: 'date' | reverse %}
-
-          {% for item in sorted_news limit:3 %}
-            <div class="micl-card-filled" tabindex="0">
-              <img alt="{{ item.title }}" class="micl-card__image" src="{{ item.image | relative_url }}">
-              <div class="micl-card__headline-m">
-                <h2>{{ item.title }}</h2>
-              </div>
-              <p class="micl-card__supporting-text">{{ item.date | date: "%d.%m.%Y" }}</p>
-              <div class="micl-card__content md-sys-typescale-body-medium">
-                <span>{{ item.intro }}</span>
-              </div>
-            </div>
-          {% endfor %}
-        </div>
-
-        {% assign topics = 'manual|theme|resource|etraining' | split: '|' %}
-        {% for topic in topics %}
-          {% assign topic_title = topic | append: '_title' %}
-          {% assign topic_text = topic | append: '_text' %}
-          {% assign topic_list = topic | append: '_list' %}
-          {% if site.data.menu[topic_title] %}
-            <div class="micl-card-filled">
-              <div class="micl-card__headline-l">
-                <h2>{{ site.data.menu[topic_title] }}</h2>
-              </div>
-              {% if site.data.menu[topic_text] %}
-                <p class="micl-card__supporting-text">
-                  <span class="md-sys-typescale-body-medium">{{ site.data.menu[topic_text] }}</span>
-                </p>
-              {% endif %}
-              <div class="micl-card__content">
-                {% if site.data.menu[topic_list] %}
-                  <ul class="micl-list">
-                    {% for item in site.data.menu[topic_list] %}
-                      <li class="micl-list-item-two" tabindex="0">
-                        <a href="{{ item.link }}" tabindex="-1">
-                          <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
-                          <span class="micl-list-item__text">
-                            <span class="micl-list-item__headline">{{ item.title }}</span>
-                            {% if item.text %}
-                              <span class="micl-list-item__supporting-text">{{ item.text }}</span>
-                            {% endif %}
-                          </span>
-                        </a>
-                      </li>
-                    {% endfor %}
-                  </ul>
-                {% endif %}
-              </div>
-            </div>
+          {% if site.data.menu[topic_text] %}
+            <p class="micl-card__supporting-text">
+              <span class="md-sys-typescale-body-medium">{{ site.data.menu[topic_text] }}</span>
+            </p>
           {% endif %}
-        {% endfor %}
-
-      </section>
-    </main>
-
-    <footer class="md-sys-typescale-body-medium">
-      <div>
-        <p>{{ site.data.footer.about_text }}</p>
-      </div>
-      <div>
-        <div class="hhri-socials">
-          {% for social in site.data.footer.social_list %}
-            <a href="{{ social.link }}" target="_blank" class="micl-iconbutton-standard-m" aria-label="{{ social.title }}">{{ social.icon }}</a>
-          {% endfor %}
+          <div class="micl-card__content">
+            {% if site.data.menu[topic_list] %}
+              <ul class="micl-list">
+                {% for item in site.data.menu[topic_list] %}
+                  {% if item.title and item.link %}
+                    <li class="micl-list-item-two" tabindex="0">
+                      <a href="{{ item.link }}" tabindex="-1">
+                        <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
+                        <span class="micl-list-item__text">
+                          <span class="micl-list-item__headline">{{ item.title }}</span>
+                          {% if item.text %}
+                            <span class="micl-list-item__supporting-text">{{ item.text }}</span>
+                          {% endif %}
+                        </span>
+                      </a>
+                    </li>
+                  {% endif %}
+                {% endfor %}
+              </ul>
+            {% endif %}
+          </div>
         </div>
-      </div>
-    </footer>
-  </body>
-</html>
+      {% endif %}
+    {% endfor %}
+  {% endif %}
+</section>
