--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <section class="micl-pane">
   <header class="micl-appbar">
     <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
