--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,8 +36,7 @@ layout: default
     </div>
     <div class="micl-pane__column">
       <h1 class="md-sys-typescale-display-medium">{{ page.title }}</h1>
-      <p class="md-sys-typescale-headline-medium">{{ page.subtitle1 }}</p>
-      <p class="md-sys-typescale-headline-medium">{{ page.subtitle2 }}</p>
+      <p class="md-sys-typescale-headline-medium">{{ page.subtitle }}</p>
     </div>
   </header>
 </section>
