--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -25,10 +25,14 @@ layout: default
     {% assign publications = 'manual,toolbox,flyer' | split: ',' %}
     {% for publication in publications %}
       {% assign publication_title = publication | append: '_title' %}
+      {% assign publication_icon = publication | append: '_icon' %}
       {% assign publication_text = publication | append: '_text' %}
       {% if page[publication_title] and page[publication_text] %}
         <div class="micl-card-filled">
           <div class="micl-card__headline-s">
+            {% if page[publication_icon] %}
+              <span class="hhri-icon">{{ page[publication_icon] }}</span>
+            {% endif %}
             <h3>{{ page[publication_title] }}</h3>
           </div>
           <div class="micl-card__content md-sys-typescale-body-medium">
