--- a/_sass/_manual.scss
+++ b/_sass/_manual.scss
@@ -12,6 +12,11 @@
     flex: 1;
     background-color: var(--md-sys-color-tertiary-container);
   }
+  .hhri-icon {
+    margin-inline-start: 16px;
+    font-size: 56px;
+    font-weight: bold;
+  }
   h3 {
     white-space: normal;
     color: var(--md-sys-color-on-tertiary-container);
