--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -43,7 +43,7 @@ layout: default
               <div class="micl-textfield-outlined">
                 <label for="{{ publication }}lan">Language</label>
                 <select id="{{ publication }}lan">
-                  {% assign languages = page{publication_languages] | split: ',' %}
+                  {% assign languages = page[publication_languages] | split: ',' %}
                   {% for language in languages %}
                     <option class="micl-list-item-one" value="{{ language | strip }}">
                       <span class="micl-list-item__text">{{ language | strip }}</span>
