--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -76,6 +76,31 @@ html {
 }
 
 /*
+ A list with two items (an image and a text block) are displayed next to each other.
+*/
+ul:has(img) {
+  display: flex;
+  flex-flow: row;
+  column-gap: 24px;
+  margin-block: 24px;
+  padding: 0;
+  list-style: none;
+
+  > li {
+    flex: 2;
+    padding-block-start: 24px;
+  }
+  > li:has(img) {
+    flex: 3;
+    padding-block-start: 0;
+
+    img {
+      max-inline-size: 100%;
+    }
+  }
+}
+
+/*
  The footer appears on every page.
 */
 footer {
