--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1&amp;icon_names=home,menu,menu_open&amp;display=block">
     <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/micl.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/micl-6.0.4.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    <script src="{{ '/assets/js/micl-6.0.4.js' | relative_url }}"></script>
   </head>
   <body class="micl-window dark">
 
