--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: 'hhri';
-  src: url('hhri.ttf?4cg1h6') format('truetype'), url('hhri.woff?4cg1h6') format('woff'), url('hhri.svg?4cg1h6#hhri') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -15,6 +7,9 @@ html {
   }
 }
 
+/*
+ Limit the total width of pages to 1600px. Derive the default card width from this.
+*/
 .micl-window {
   --hhri-card-width: calc((1600px - var(--md-sys-layout-pane-spacer) - (2 * var(--md-sys-layout-window-margin)) - (3 * var(--md-sys-card-margin, 0px))) / 5);
   max-inline-size: 1600px;
@@ -27,6 +22,13 @@ html {
 /*
   Icons are stored in the hhri.ttf font file.
 */
+@font-face {
+  font-family: 'hhri';
+  src: url('hhri.ttf?4cg1h6') format('truetype'), url('hhri.woff?4cg1h6') format('woff'), url('hhri.svg?4cg1h6#hhri') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 .hhri-icon {
   font-family: 'hhri';
 }
