--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
                 {% for item in site.data.menu[topic_list] %}
                   {% if item.title and item.link %}
                     <input type="radio" id="topic{{ forloop.index }}" name="navtopic" value="topic{{ forloop.index }}">
-                    <label for="topic{{ forloop.index 00" class="micl-navigationrail__item" tabindex="0">
+                    <label for="topic{{ forloop.index }}" class="micl-navigationrail__item" tabindex="0">
                       <a href="{{ item.link | relative_url }}">
                         <span class="micl-navigationrail__icon hhri-icon" aria-hidden="true">{{ item.icon }}</span>
                         <span class="micl-navigationrail__text">{{ item.title }}</span>
