--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
               {% if site.data.menu[topic_list] %}
                 {% for item in site.data.menu[topic_list] %}
                   {% if item.title and item.link %}
-                    <input type="radio" id="topic{{ forloop.index }}" name="navtopic" value="topic{{ forloop.index }}">
-                    <label for="topic{{ forloop.index }}" class="micl-navigationrail__item" tabindex="0">
+                    <input type="radio" id="topic-{{ forloop.parentloop.index }}-{{ forloop.index }}" name="navtopic" value="topic-{{ forloop.parentloop.index }}-{{ forloop.index }}">
+                    <label for="topic-{{ forloop.parentloop.index }}-{{ forloop.index }}" class="micl-navigationrail__item" tabindex="0">
                       <a href="{{ item.link | relative_url }}">
                         <span class="micl-navigationrail__icon hhri-icon" aria-hidden="true">{{ item.icon }}</span>
                         <span class="micl-navigationrail__text">{{ item.title }}</span>
