--- a/_sass/_manual.scss
+++ b/_sass/_manual.scss
@@ -1,3 +1,10 @@
+.hhri-manual {
+  display: flex;
+  flex-direction: column;
+  row-gap: 48px;
+  background-color: inherit;
+}
+
 /**
  * The container that different publications for a manual.
  */
