--- a/_sass/_manual.scss
+++ b/_sass/_manual.scss
@@ -10,6 +10,7 @@
  */
 .hhri-manual-publications {
   display: flex;
+  gap: 8px;
 
   @media (max-width: 600px) {
     flex-direction: column;
@@ -17,6 +18,7 @@
 
   &> div {
     flex: 1;
+    padding-block-start: 16px;
     background-color: var(--md-sys-color-tertiary-container);
   }
   .hhri-icon {
