--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -18,7 +18,7 @@ layout: default
   {% assign intro_text = parts[0] %}
   {% assign main_body = parts[1] %}
   <div class="hhri-manual md-sys-typescale-body-large">
-    <div>
+    <div class="hhri-manual__intro">
       {{ intro_text }}
     </div>
 
