--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -41,16 +41,20 @@ layout: default
             <div class="micl-card__content md-sys-typescale-body-medium">
               <p>{{ page[publication_text] }}</p>
               {% if page[publication_languages] %}
-                <div class="micl-textfield-outlined">
-                  <label for="{{ publication }}lan">Language</label>
-                  <select id="{{ publication }}lan">
-                    {% assign languages = page[publication_languages] | split: ',' %}
-                    {% for language in languages %}
-                      <option class="micl-list-item-one" value="{{ language | strip }}">
-                        <span class="micl-list-item__text">{{ language | strip }}</span>
-                      </option>
-                    {% endfor %}
-                  </select>
+                <div style="position:relative">
+                  <button type="button" class="micl-button-outlined-m" popovertarget="menu{{ forloop.index }}">View manual</button>
+                  <nav id="menu{{ forloop.index }}" class="micl-menu" popover>
+                    <ul class="micl-list">
+                      {% assign languages = page[publication_languages] | split: ',' %}
+                      {% for language in languages %}
+                        <li class="micl-list-item-one" tabindex="0">
+                          <span class="micl-list-item__text">
+                            <span class="micl-list-item__headline">{{ language | strip }}</span>
+                          </span>
+                        </li>
+                      {% endfor %}
+                    </ul>
+                  </nav>
                 </div>
               {% endif %}
             </div>
