--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -22,46 +22,72 @@ layout: default
       {{ intro_text }}
     </div>
 
-    <div class="hhri-manual-publications">
-      {% assign publications = 'manual,toolbox,flyer' | split: ',' %}
-      {% for publication in publications %}
-        {% assign publication_title = publication | append: '_title' %}
-        {% assign publication_icon = publication | append: '_icon' %}
-        {% assign publication_text = publication | append: '_text' %}
-        {% assign publication_languages = publication | append: '_languages' %}
-  
-        {% if page[publication_title] and page[publication_text] %}
-          <div class="micl-card-filled">
-            <div class="micl-card__headline-s">
-              {% if page[publication_icon] %}
-                <span class="hhri-icon">{{ page[publication_icon] }}</span>
-              {% endif %}
-              <h3>{{ page[publication_title] }}</h3>
+    {% if page.name and site.data[page.name].publications %}
+      <div class="hhri-manual-publications">
+        {% assign publications = site.data[page.name].publications | split: ',' %}
+        {% for publication in publications %}
+          {% assign publication_title    = publication | strip | append: '_title' %}
+          {% assign publication_icon     = publication | strip | append: '_icon' %}
+          {% assign publication_text     = publication | strip | append: '_text' %}
+          {% assign publication_view     = publication | strip | append: '_view' %}
+          {% assign publication_download = publication | strip | append: '_download' %}
+    
+          {% if site.data[page.name][publication_title] and site.data[page.name][publication_text] %}
+            <div class="micl-card-filled">
+              <div class="micl-card__headline-s">
+                {% if site.data[page.name][publication_icon] %}
+                  <span class="hhri-icon">{{ site.data[page.name][publication_icon] }}</span>
+                {% endif %}
+                <h3>{{ site.data[page.name][publication_title] }}</h3>
+              </div>
+              <div class="micl-card__content md-sys-typescale-body-medium">
+                <p>{{ site.data[page.name][publication_text] }}</p>
+                {% if site.data[page.name][publication_view] %}
+                  <div style="position:relative">
+                    <button type="button" class="micl-button-outlined-m" popovertarget="menu{{ forloop.index }}">View</button>
+                    <nav id="menu{{ forloop.index }}" class="micl-menu" popover>
+                      <ul class="micl-list">
+                        {% for view in site.data[page.name][publication_view] %}
+                          if {% if view.language and view.link %}
+                            <li class="micl-list-item-one" tabindex="0">
+                              <a href="{{ view.link }}" target="_blank">
+                                <span class="micl-list-item__text">
+                                  <span class="micl-list-item__headline">{{ view.language }}</span>
+                                </span>
+                              </a>
+                            </li>
+                          {% endif %}
+                        {% endfor %}
+                      </ul>
+                    </nav>
+                  </div>
+                {% endif %}
+                {% if site.data[page.name][publication_download] %}
+                  <div style="position:relative">
+                    <button type="button" class="micl-button-outlined-m" popovertarget="menu{{ forloop.index }}">View</button>
+                    <nav id="menu{{ forloop.index }}" class="micl-menu" popover>
+                      <ul class="micl-list">
+                        {% for download in site.data[page.name][publication_download] %}
+                          if {% if download.language and download.link %}
+                            <li class="micl-list-item-one" tabindex="0">
+                              <a href="{{ download.link }}" download>
+                                <span class="micl-list-item__text">
+                                  <span class="micl-list-item__headline">{{ download.language }}</span>
+                                </span>
+                              </a>
+                            </li>
+                          {% endif %}
+                        {% endfor %}
+                      </ul>
+                    </nav>
+                  </div>
+                {% endif %}
+              </div>
             </div>
-            <div class="micl-card__content md-sys-typescale-body-medium">
-              <p>{{ page[publication_text] }}</p>
-              {% if page[publication_languages] %}
-                <div style="position:relative">
-                  <button type="button" class="micl-button-outlined-m" popovertarget="menu{{ forloop.index }}">View manual</button>
-                  <nav id="menu{{ forloop.index }}" class="micl-menu" popover>
-                    <ul class="micl-list">
-                      {% assign languages = page[publication_languages] | split: ',' %}
-                      {% for language in languages %}
-                        <li class="micl-list-item-one" tabindex="0">
-                          <span class="micl-list-item__text">
-                            <span class="micl-list-item__headline">{{ language | strip }}</span>
-                          </span>
-                        </li>
-                      {% endfor %}
-                    </ul>
-                  </nav>
-                </div>
-              {% endif %}
-            </div>
-          </div>
-        {% endif %}
-      {% endfor %}
-    </div>
+          {% endif %}
+        {% endfor %}
+      </div>
+    {% endif %}
   
     {{ main_body }}
   </div>
