--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -22,9 +22,9 @@ layout: default
       {{ intro_text }}
     </div>
 
-    {% if page.name and site.data[page.name].publications %}
+    {% if page.filename and site.data[page.filename].publications %}
       <div class="hhri-manual-publications">
-        {% assign publications = site.data[page.name].publications | split: ',' %}
+        {% assign publications = site.data[page.filename].publications | split: ',' %}
         {% for publication in publications %}
           {% assign publication_title    = publication | strip | append: '_title' %}
           {% assign publication_icon     = publication | strip | append: '_icon' %}
@@ -32,22 +32,22 @@ layout: default
           {% assign publication_view     = publication | strip | append: '_view' %}
           {% assign publication_download = publication | strip | append: '_download' %}
     
-          {% if site.data[page.name][publication_title] and site.data[page.name][publication_text] %}
+          {% if site.data[page.filename][publication_title] and site.data[page.filename][publication_text] %}
             <div class="micl-card-filled">
               <div class="micl-card__headline-s">
-                {% if site.data[page.name][publication_icon] %}
-                  <span class="hhri-icon">{{ site.data[page.name][publication_icon] }}</span>
+                {% if site.data[page.filename][publication_icon] %}
+                  <span class="hhri-icon">{{ site.data[page.filename][publication_icon] }}</span>
                 {% endif %}
-                <h3>{{ site.data[page.name][publication_title] }}</h3>
+                <h3>{{ site.data[page.filename][publication_title] }}</h3>
               </div>
               <div class="micl-card__content md-sys-typescale-body-medium">
-                <p>{{ site.data[page.name][publication_text] }}</p>
-                {% if site.data[page.name][publication_view] %}
+                <p>{{ site.data[page.filename][publication_text] }}</p>
+                {% if site.data[page.filename][publication_view] %}
                   <div style="position:relative">
                     <button type="button" class="micl-button-outlined-m" popovertarget="menu{{ forloop.index }}">View</button>
                     <nav id="menu{{ forloop.index }}" class="micl-menu" popover>
                       <ul class="micl-list">
-                        {% for view in site.data[page.name][publication_view] %}
+                        {% for view in site.data[page.filename][publication_view] %}
                           if {% if view.language and view.link %}
                             <li class="micl-list-item-one" tabindex="0">
                               <a href="{{ view.link }}" target="_blank">
@@ -62,12 +62,12 @@ layout: default
                     </nav>
                   </div>
                 {% endif %}
-                {% if site.data[page.name][publication_download] %}
+                {% if site.data[page.filename][publication_download] %}
                   <div style="position:relative">
                     <button type="button" class="micl-button-outlined-m" popovertarget="menu{{ forloop.index }}">View</button>
                     <nav id="menu{{ forloop.index }}" class="micl-menu" popover>
                       <ul class="micl-list">
-                        {% for download in site.data[page.name][publication_download] %}
+                        {% for download in site.data[page.filename][publication_download] %}
                           if {% if download.language and download.link %}
                             <li class="micl-list-item-one" tabindex="0">
                               <a href="{{ download.link }}" download>
